add applicationDefaultJvmArgs