@@ -35,6 +35,7 @@ tasks.withType(JavaExec).configureEach {
 application {
     mainClass = "jarinker.cli.Cli"
     applicationName = "jarinker"
+    applicationDefaultJvmArgs = args + "--add-opens=jdk.jdeps/com.sun.tools.jdeps=ALL-UNNAMED"
 }
 
 // https://graalvm.github.io/native-build-tools/latest/gradle-plugin.html#configuration-options
